# hello_component_hpx

./: CMakeLists.txt  README.md
include/: hello_component.hpp
src/: hello_component.cpp  main.cpp
